--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>com.pivotallabs</groupId>
             <artifactId>robolectric</artifactId>
-            <version>1.0-RC1</version>
+            <version>1.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
