--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -125,6 +125,16 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".weblaunchers.BitBucketWebLaunchActivity" android:label="@string/app_name">
+			<intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE"></category>
+                <action android:name="android.intent.action.VIEW"></action>
+				<data android:host="bitbucket.org" android:scheme="https" android:pathPattern="/.*/.*" />
+				<data android:host="bitbucket.org" android:scheme="http" android:pathPattern="/.*/.*" />
+			</intent-filter>
+		</activity>
+
         <service android:name="GitOperationsService">
             <intent-filter>
                 <action android:name="org.openintents.git.repo.SYNC"/>
