upgrade to android-maven-plugin 3.2.0
This has been a long time coming - the proguard-handling changed with the
release of 3.0.0, and we've been stuck on an alpha-release ever since...
finally made it on to the modern version!

The exclusions are unfortunately necessary to avoid Dalvik verifier errors
as it freaks out over differently proguard-ed versions of the same class.

--- a/agit-integration-tests/pom.xml
+++ b/agit-integration-tests/pom.xml
@@ -18,25 +18,37 @@
             <artifactId>toy-ssh-agent</artifactId>
             <!-- Needs to come before Agit -->
             <version>1.6</version>
+            <scope>provided</scope>
             <type>apk</type>
         </dependency>
         <dependency>
             <groupId>com.madgag</groupId>
             <artifactId>agit</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
             <type>apk</type>
         </dependency>
         <dependency>
             <groupId>com.madgag</groupId>
             <artifactId>agit</artifactId>
             <version>${project.version}</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.madgag</groupId>
             <artifactId>agit-test-utils</artifactId>
             <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.madgag</groupId>
+                    <artifactId>org.eclipse.jgit</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>commons-io</groupId>
+                    <artifactId>commons-io</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
@@ -107,10 +119,6 @@
                         <version>r16</version>
                     </dependency>
                 </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>com.pyx4me</groupId>
-                <artifactId>proguard-maven-plugin</artifactId>
             </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
