improve maven conf for manifest-updating- android-maven-plugin v3

--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -121,14 +121,6 @@
                     <include>CREDITS.*</include>
                 </includes>
             </resource>
-            <resource>
-                <directory>${project.basedir}</directory>
-                <filtering>true</filtering>
-                <targetPath>${project.build.directory}/filtered-manifest</targetPath>
-                <includes>
-                    <include>AndroidManifest.xml</include>
-                </includes>
-            </resource>
         </resources>
         <plugins>
             <plugin>
@@ -145,10 +137,6 @@
             <plugin>
                 <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                 <artifactId>android-maven-plugin</artifactId>
-                <configuration>
-                    <androidManifestFile>${project.build.directory}/filtered-manifest/AndroidManifest.xml
-                    </androidManifestFile>
-                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -156,28 +144,7 @@
 
     <profiles>
         <profile>
-            <id>development</id>
-            <!-- using this since activeByDefault does not work well with multiple profiles -->
-            <activation>
-                <property>
-                    <name>environment</name>
-                    <value>!production</value>
-                </property>
-            </activation>
-            <properties>
-                <deployment.stage>In Development</deployment.stage>
-                <android.debuggable>true</android.debuggable>
-            </properties>
-        </profile>
-        <profile>
-            <id>production</id>
-            <properties>
-                <deployment.stage>In Production</deployment.stage>
-                <android.debuggable>false</android.debuggable>
-            </properties>
-        </profile>
-        <profile>
-            <id>release</id>
+            <id>release-to-market</id>
             <!-- via this activation the profile is automatically used when the release is done with the maven release
             plugin -->
             <activation>
@@ -223,9 +190,11 @@
                             </sign>
                             <zipalign>
                                 <verbose>true</verbose>
-                                <outputApk>${project.build.directory}/${project.artifactId}-signed-aligned.apk
-                                </outputApk>
+                                <outputApk>${project.build.directory}/${project.artifactId}-${project.version}-signed-aligned.apk</outputApk>
                             </zipalign>
+                            <manifest>
+                                <debuggable>false</debuggable>
+                            </manifest>
                         </configuration>
                         <executions>
                             <execution>
@@ -233,33 +202,6 @@
                                 <phase>package</phase>
                                 <goals>
                                     <goal>zipalign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>build-helper-maven-plugin</artifactId>
-                        <configuration>
-                            <artifacts>
-                                <artifact>
-                                    <file>${project.build.directory}/${project.artifactId}-signed-aligned.apk</file>
-                                    <type>apk</type>
-                                    <classifier>signed-aligned</classifier>
-                                </artifact>
-                                <artifact>
-                                    <file>${project.build.directory}/proguard_map.txt</file>
-                                    <type>map</type>
-                                    <classifier>release</classifier>
-                                </artifact>
-                            </artifacts>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>attach-signed-aligned</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>attach-artifact</goal>
                                 </goals>
                             </execution>
                         </executions>
