--- a/agit-integration-tests/AndroidManifest.xml
+++ b/agit-integration-tests/AndroidManifest.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- package name must be unique so suffix with "tests" so package loader doesn't ignore us -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.madgag.agit.tests"
-          android:installLocation="preferExternal"
-          android:versionCode="1"
-          android:versionName="1.0">
+<!-- package name must be unique so suffix with "tests" so package loader doesn't ignore us --><manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="1290" android:versionName="1.29-SNAPSHOT" package="com.madgag.agit.tests">
 
     <!-- We add an application tag here just so that we can indicate that
          this package needs to link against the android.test library,
@@ -18,8 +13,6 @@
     the package of com.example.android.apis.  To run the tests use the command:
     "adb shell am instrument -w com.example.android.apis.tests/android.test.InstrumentationTestRunner"
     -->
-    <instrumentation android:name="android.test.InstrumentationTestRunner"
-                     android:targetPackage="com.madgag.agit"
-                     android:label="Tests for Agit"/>
+    <instrumentation android:label="Tests for Agit" android:name="android.test.InstrumentationTestRunner" android:targetPackage="com.madgag.agit"/>
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="13"/>
 </manifest>
