--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.madgag.agit"
-          android:installLocation="preferExternal"
-          android:versionName="${project.version}"
-          android:versionCode="${versionCode}">
-    <application
-            android:theme="@style/Theme.App"
-            android:icon="@drawable/icon"
-            android:label="@string/app_name"
-            android:debuggable="${android.debuggable}">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="1290" android:versionName="1.29-SNAPSHOT" package="com.madgag.agit">
+    <application android:debuggable="true" android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/Theme.App">
 
         <activity android:name="DashboardActivity">
             <intent-filter>
@@ -29,8 +21,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="RepositoryViewerActivity"
-                  android:label="@string/app_name">
+        <activity android:label="@string/app_name" android:name="RepositoryViewerActivity">
             <intent-filter>
                 <action android:name="org.openintents.git.repo.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -94,44 +85,43 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".weblaunchers.GitProtocolLaunchActivity" android:label="@string/app_name">
+        <activity android:label="@string/app_name" android:name=".weblaunchers.GitProtocolLaunchActivity">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"></category>
-                <action android:name="android.intent.action.VIEW"></action>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <action android:name="android.intent.action.VIEW"/>
                 <data android:scheme="git"/>
                 <data android:scheme="ssh"/>
             </intent-filter>
         </activity>
 
-        <activity android:name=".weblaunchers.GitHubWebLaunchActivity" android:label="@string/app_name">
+        <activity android:label="@string/app_name" android:name=".weblaunchers.GitHubWebLaunchActivity">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"></category>
-                <action android:name="android.intent.action.VIEW"></action>
-                <data android:host="github.com" android:scheme="https" android:pathPattern="/.*/.*"/>
-                <data android:host="github.com" android:scheme="http" android:pathPattern="/.*/.*"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <action android:name="android.intent.action.VIEW"/>
+                <data android:host="github.com" android:pathPattern="/.*/.*" android:scheme="https"/>
+                <data android:host="github.com" android:pathPattern="/.*/.*" android:scheme="http"/>
             </intent-filter>
         </activity>
 
-        <activity android:name=".weblaunchers.GitoriousWebLaunchActivity" android:label="@string/app_name">
+        <activity android:label="@string/app_name" android:name=".weblaunchers.GitoriousWebLaunchActivity">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"></category>
-                <action android:name="android.intent.action.VIEW"></action>
-                <data android:host="gitorious.org" android:scheme="https" android:pathPattern="/.*/.*"/>
-                <data android:host="gitorious.org" android:scheme="http" android:pathPattern="/.*/.*"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <action android:name="android.intent.action.VIEW"/>
+                <data android:host="gitorious.org" android:pathPattern="/.*/.*" android:scheme="https"/>
+                <data android:host="gitorious.org" android:pathPattern="/.*/.*" android:scheme="http"/>
             </intent-filter>
         </activity>
 
-        <activity android:name=".weblaunchers.GoogleCodeWebLaunchActivity" android:label="@string/app_name">
+        <activity android:label="@string/app_name" android:name=".weblaunchers.GoogleCodeWebLaunchActivity">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"></category>
-                <action android:name="android.intent.action.VIEW"></action>
-                <data android:host="code.google.com" android:scheme="https"
-                      android:pathPattern="/p/.*/source/checkout"/>
-                <data android:host="code.google.com" android:scheme="http" android:pathPattern="/p/.*/source/checkout"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <action android:name="android.intent.action.VIEW"/>
+                <data android:host="code.google.com" android:pathPattern="/p/.*/source/checkout" android:scheme="https"/>
+                <data android:host="code.google.com" android:pathPattern="/p/.*/source/checkout" android:scheme="http"/>
             </intent-filter>
         </activity>
 
@@ -144,30 +134,23 @@
             </intent-filter>
         </service>
 
-        <service android:name=".sync.AccountAuthenticatorService"
-                 android:exported="true" android:process=":auth">
+        <service android:exported="true" android:name=".sync.AccountAuthenticatorService" android:process=":auth">
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator"/>
             </intent-filter>
-            <meta-data android:name="android.accounts.AccountAuthenticator"
-                       android:resource="@xml/authenticator"/>
+            <meta-data android:name="android.accounts.AccountAuthenticator" android:resource="@xml/authenticator"/>
         </service>
 
-        <service android:name=".sync.AgitSyncAdapterService"
-                 android:exported="true" android:process=":repos">
+        <service android:exported="true" android:name=".sync.AgitSyncAdapterService" android:process=":repos">
             <intent-filter>
                 <action android:name="android.content.SyncAdapter"/>
             </intent-filter>
-            <meta-data android:name="android.content.SyncAdapter"
-                       android:resource="@xml/sync_adapter"/>
+            <meta-data android:name="android.content.SyncAdapter" android:resource="@xml/sync_adapter"/>
         </service>
 
-        <provider android:name=".sync.DummyProvider"
-                  android:authorities="com.madgag.agit.sync"
-                  android:syncable="true"
-                  android:label="Git Repos"/>
+        <provider android:authorities="com.madgag.agit.sync" android:label="Git Repos" android:name=".sync.DummyProvider" android:syncable="true"/>
 
-        <provider android:name="GitInfoProvider" android:authorities="com.madgag.agit.gitinfoprovider"></provider>
+        <provider android:authorities="com.madgag.agit.gitinfoprovider" android:name="GitInfoProvider"/>
 
 
     </application>
@@ -184,4 +167,4 @@
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
     <uses-permission android:name="android.permission.READ_SYNC_STATS"/>
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
-</manifest> 
+</manifest>
