--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <android.version>4.0.1.2</android.version>
-        <maven.build.timestamp.format>yyMMdddHH</maven.build.timestamp.format>
-        <!-- Apparently necessary due to http://jira.codehaus.org/browse/MRESOURCES-99 and also more readable -->
-        <versionCode>${maven.build.timestamp}</versionCode>
     </properties>
     <licenses>
         <license>
@@ -98,10 +95,7 @@
                     <artifactId>maven-release-plugin</artifactId>
                     <version>2.1</version>
                     <configuration>
-                        <!--
-                         During release:perform, enable the "release" profile
-                        -->
-                        <releaseProfiles>release</releaseProfiles>
+                        <releaseProfiles>release-to-market</releaseProfiles>
                         <goals>validate</goals>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
                     </configuration>
@@ -121,7 +115,21 @@
                             <verbose>true</verbose>
                         </zipalign>
                         <undeployBeforeDeploy>true</undeployBeforeDeploy>
+                        <manifest>
+                            <versionName />
+                            <versionCodeUpdateFromVersion>true</versionCodeUpdateFromVersion>
+                            <debuggable>true</debuggable>
+                        </manifest>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <id>manifestUpdate</id>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>manifest-update</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
@@ -150,50 +158,6 @@
                 <module>agit-test-utils</module>
                 <module>agit</module>
             </modules>
-        </profile>
-        <!-- to avoid having to do symlinks to rt.jar like documented e.g. here
-        http://bruehlicke.blogspot.com/2009/11/missing-rtjar-mac-os-x-using-proguard.html
-        http://codebistro.com/2010/07/18/proguard-and-runtime-libraries-on-mac-os-x/
-        -->
-        <profile>
-            <id>linux</id>
-            <activation>
-                <os>
-                    <family>unix</family>
-                </os>
-            </activation>
-            <properties>
-                <rt.jar.path>${java.home}/lib/rt.jar</rt.jar.path>
-                <jsse.jar.path>${java.home}/lib/jsse.jar</jsse.jar.path>
-            </properties>
-        </profile>
-        <!-- mac profile has to be after unix since running on mac will trigger both -->
-        <profile>
-            <id>mac</id>
-            <activation>
-                <os>
-                    <family>mac</family>
-                </os>
-            </activation>
-            <properties>
-                <!-- absolute path -->
-                <!--<rt.jar.path>/System/Library/Frameworks/JavaVM.framework/Versions/1.6.0/Classes/classes.jar</rt.jar.path>-->
-                <!-- or with JAVA_HOME /System/Library/Frameworks/JavaVM.framework/Versions/1.6.0/Home/ -->
-                <rt.jar.path>${java.home}/../Classes/classes.jar</rt.jar.path>
-                <jsse.jar.path>${java.home}/../Classes/jsse.jar</jsse.jar.path>
-            </properties>
-        </profile>
-        <profile>
-            <id>windows</id>
-            <activation>
-                <os>
-                    <family>windows</family>
-                </os>
-            </activation>
-            <properties>
-                <rt.jar.path>${java.home}/jre/lib/rt.jar</rt.jar.path>
-                <jsse.jar.path>${java.home}/jre/lib/jsse.jar</jsse.jar.path>
-            </properties>
         </profile>
     </profiles>
 </project>
